<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.getloan"
    tools:showIn="@layout/activity_getloan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottommargin"
            android:text="@string/loan"
            android:textSize="18dp"
            android:textStyle="bold"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottommargin"
                android:hint="name"
                android:textSize="14sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_singleLineEllipsis="true"
                android:id="@+id/name"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/validate"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:id="@+id/valid"
                android:layout_margin="@dimen/bottommargin"/>



        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="Reg Id"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="120"
            app:met_singleLineEllipsis="true"
            android:id="@+id/regid"
            android:enabled="false"
            android:focusable="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="@string/loanamount"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="120"
            app:met_singleLineEllipsis="true"
            android:id="@+id/loanamount"
            android:enabled="false"
            android:inputType="number"
            android:focusable="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="@string/stake"
            android:textSize="14sp"
            android:enabled="false"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="false"
            android:maxLines="3"
            android:id="@+id/asseststake"

            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottommargin"
            android:text="@string/readto"
            android:textSize="15dp"
            android:gravity="left"
            android:layout_margin="10dp"
            android:id="@+id/p_regid"
            android:textStyle="italic"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/getloan"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/loan"
            android:layout_margin="@dimen/bottommargin"/>

    </LinearLayout>

</RelativeLayout>