<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottommargin"
            android:text="@string/wit"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="@string/wit_name"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="120"
            android:id="@+id/witname"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="@string/wit_regid"
            android:textSize="14sp"
            android:enabled="true"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            android:id="@+id/witregid"
            android:visibility="gone"
            app:met_singleLineEllipsis="true" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Next"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/next"
            android:layout_marginTop="@dimen/bottommargin"/>

    </LinearLayout>

</LinearLayout>