<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="Occupation"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true"
            android:id="@+id/occup"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="State of Origin"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="120"
            app:met_singleLineEllipsis="true"
            android:id="@+id/state"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottommargin"
            android:hint="Next Of Kin"
            android:textSize="14sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="true"
            android:id="@+id/nok"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottommargin"
            android:text="@string/dateofbirth"
            android:textSize="15dp"
            android:textStyle="bold"/>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/bottommargin"
                   android:hint="@string/date"
                   android:textSize="14sp"
                   app:met_baseColor="@color/colorPrimary"
                   app:met_floatingLabel="highlight"
                   app:met_maxCharacters="2"
                   app:met_singleLineEllipsis="true"
                   android:layout_weight="1"
                   android:inputType="number"
                   android:id="@+id/date"/>

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/bottommargin"
                   android:hint="@string/month"
                   android:textSize="14sp"
                   app:met_baseColor="@color/colorPrimary"
                   app:met_floatingLabel="highlight"
                   app:met_maxCharacters="2"
                   app:met_singleLineEllipsis="true"
                   android:layout_weight="1"
                   android:inputType="number"
                   android:id="@+id/month"/>

               <com.rengwuxian.materialedittext.MaterialEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/bottommargin"
                   android:hint="@string/year"
                   android:textSize="14sp"
                   app:met_baseColor="@color/colorPrimary"
                   app:met_floatingLabel="highlight"
                   app:met_maxCharacters="4"
                   app:met_minCharacters="4"
                   app:met_singleLineEllipsis="true"
                   android:id="@+id/year"
                   android:inputType="number"
                   android:layout_weight="1"/>

           </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Next"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/next"
            android:layout_marginTop="@dimen/bottommargin"/>

    </LinearLayout>



</LinearLayout>